<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <EditText
        android:id="@+id/ed_first_name"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/ed_last_name"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/ed_username"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_below="@+id/ed_last_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="200dp"
        android:layout_marginVertical="50dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/ed_mobile"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/mobile" />

    <EditText
        android:id="@+id/ed_home_phone"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="200dp"
        android:layout_marginVertical="100dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/home_phone" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/ed_confirmation_password"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="200dp"
        android:layout_marginVertical="150dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/confirm_password" />

    <EditText
        android:id="@+id/ed_home_address"
        android:layout_width="360dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="200dp"
        android:layout_marginVertical="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/home_address" />

    <EditText
        android:id="@+id/ed_work_address"
        android:layout_width="360dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="200dp"
        android:layout_marginVertical="310dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/work_address" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="450dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background=""
        android:hint="@string/register" />
</RelativeLayout>